--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 matlab
-matplotlib
-numpy
-pandas
-paramiko
-pathlib
-seaborn
-sys
-westernintnet
+matplotlib==3.0.0
+numpy==1.15.2
+pandas==0.23.4
+paramiko==2.4.2
+seaborn==0.9.0
