--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matlab
-matplotlib==3.0.0
-numpy==1.15.2
-pandas==0.23.4
+matplotlib==3.0.2
+numpy==1.16.0
+pandas==0.24.2
 paramiko==2.4.2
+scipy==1.2.0
 seaborn==0.9.0
-
+tqdm==4.29.1
