--- a/requirements_dep_tree.txt
+++ b/requirements_dep_tree.txt
@@ -1,25 +1,33 @@
-certifi==2020.4.5.1
+asn1crypto==0.24.0
+cryptography==2.1.4
 geopy==1.20.0
   - geographiclib [required: >=1.49,<2, installed: 1.50]
+idna==2.6
+keyring==10.6.0
+  - secretstorage [required: Any, installed: 2.3.1]
+keyrings.alt==3.0
 pipdeptree==0.13.2
   - pip [required: >=6.0.0, installed: 20.0.2]
+postreise==0.3
+pycrypto==2.6.1
+pygobject==3.26.1
+pyxdg==0.25
 seaborn==0.9.0
   - matplotlib [required: >=1.4.3, installed: 3.0.2]
     - cycler [required: >=0.10, installed: 0.10.0]
-      - six [required: Any, installed: 1.14.0]
+      - six [required: Any, installed: 1.11.0]
     - kiwisolver [required: >=1.0.1, installed: 1.2.0]
     - numpy [required: >=1.10.0, installed: 1.16.0]
     - pyparsing [required: >=2.0.1,!=2.1.6,!=2.1.2,!=2.0.4, installed: 2.4.7]
     - python-dateutil [required: >=2.1, installed: 2.8.1]
-      - six [required: >=1.5, installed: 1.14.0]
+      - six [required: >=1.5, installed: 1.11.0]
   - numpy [required: >=1.9.3, installed: 1.16.0]
   - pandas [required: >=0.15.2, installed: 0.25.3]
     - numpy [required: >=1.13.3, installed: 1.16.0]
     - python-dateutil [required: >=2.6.1, installed: 2.8.1]
-      - six [required: >=1.5, installed: 1.14.0]
+      - six [required: >=1.5, installed: 1.11.0]
     - pytz [required: >=2017.2, installed: 2019.3]
   - scipy [required: >=0.14.0, installed: 1.4.1]
     - numpy [required: >=1.13.3, installed: 1.16.0]
-setuptools==46.1.3.post20200330
-wheel==0.34.2
-wincertstore==0.2
+setuptools==39.0.1
+wheel==0.30.0
