--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -15,7 +15,7 @@ packaging==20.3
 pandas==0.25.3
 Pillow==7.1.1
 pluggy==0.13.1
-postreise==0.3
+powersimdata==0.3
 py==1.8.1
 pyparsing==2.4.7
 pytest==4.5.0
