--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -1,28 +1,27 @@
 atomicwrites==1.4.0
 attrs==19.3.0
-bokeh==1.1.0
+bokeh==2.0.2
 cycler==0.10.0
-importlib-metadata==1.6.0
 Jinja2==2.11.2
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib==3.0.2
-more-itertools==8.2.0
-numpy==1.16.0
-packaging==20.3
-pandas==0.25.3
+matplotlib==3.2.1
+more-itertools==8.4.0
+numpy==1.18.5
+packaging==20.4
+pandas==1.0.4
 Pillow==7.1.2
 pluggy==0.13.1
-py==1.8.1
+py==1.8.2
 pyparsing==2.4.7
 pyproj==1.9.6
-pytest==4.5.0
+pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 scipy==1.4.1
-seaborn==0.9.0
-six==1.14.0
+seaborn==0.10.1
+six==1.15.0
 tornado==6.0.4
-wcwidth==0.1.9
-zipp==3.1.0
+typing-extensions==3.7.4.2
+wcwidth==0.2.4
