chore: add pytest to ci and setup pipenv

--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -1,8 +1,14 @@
-atomicwrites==1.4.0
 attrs==19.3.0
+bcrypt==3.1.7
 bokeh==2.0.2
+cffi==1.14.0
+cryptography==2.9.2
 cycler==0.10.0
+geographiclib==1.50
+geopy==2.0.0
+importlib-metadata==1.7.0
 Jinja2==2.11.2
+jsonpickle==1.4.1
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
@@ -10,18 +16,24 @@ more-itertools==8.4.0
 numpy==1.18.5
 packaging==20.4
 pandas==1.0.4
-Pillow==7.1.2
+paramiko==2.7.1
+Pillow==7.2.0
 pluggy==0.13.1
-py==1.8.2
+-e ../PowerSimData
+py==1.9.0
+pycparser==2.20
+PyNaCl==1.4.0
 pyparsing==2.4.7
 pyproj==1.9.6
 pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
-scipy==1.4.1
+scipy==1.5.1
 seaborn==0.10.1
 six==1.15.0
 tornado==6.0.4
+tqdm==4.47.0
 typing-extensions==3.7.4.2
-wcwidth==0.2.4
+wcwidth==0.2.5
+zipp==3.1.0
