--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   lint:
+    if: "!contains(github.event.head_commit.message, 'skip_ci')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
