--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bokeh==2.0.2
 matplotlib==3.2.1
 numpy==1.18.5
 pandas==1.0.4
-# powersimdata==0.3
+-e ../PowerSimData
 pyproj==1.9.6
 pytest==5.4.3
 seaborn==0.10.1
