chore: add black to lock file and fix outdated repo name

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout PowerSimData
         uses: actions/checkout@v2
         with:
-          repository: intvenlab/PowerSimData
+          repository: Breakthrough-Energy/PowerSimData
           token: ${{ secrets.CI_TOKEN_CLONE_REPO }}
           path: PowerSimData
 
