--- a/Pipfile
+++ b/Pipfile
@@ -12,3 +12,6 @@ pyproj = "==1.9.6"
 pytest = "==5.4.3"
 seaborn = "==0.10.1"
 powersimdata = {editable = true, path = "../PowerSimData"}
+
+[dev-packages]
+black = "*"
