--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -1,8 +1,11 @@
-attrs==19.3.0
-bcrypt==3.1.7
+appdirs==1.4.4
+attrs==20.1.0
+bcrypt==3.2.0
+black==20.8b1
 bokeh==2.0.2
-cffi==1.14.0
-cryptography==2.9.2
+cffi==1.14.2
+click==7.1.2
+cryptography==3.0
 cycler==0.10.0
 geographiclib==1.50
 geopy==2.0.0
@@ -13,10 +16,12 @@ kiwisolver==1.2.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 more-itertools==8.4.0
+mypy-extensions==0.4.3
 numpy==1.18.5
 packaging==20.4
 pandas==1.0.4
 paramiko==2.7.1
+pathspec==0.8.0
 Pillow==7.2.0
 pluggy==0.13.1
 -e ../PowerSimData
@@ -29,11 +34,14 @@ pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
-scipy==1.5.1
+regex==2020.7.14
+scipy==1.5.2
 seaborn==0.10.1
 six==1.15.0
+toml==0.10.1
 tornado==6.0.4
-tqdm==4.47.0
-typing-extensions==3.7.4.2
+tqdm==4.48.2
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
 wcwidth==0.2.5
 zipp==3.1.0
