--- a/requirements_freeze.txt
+++ b/requirements_freeze.txt
@@ -5,7 +5,7 @@ black==20.8b1
 bokeh==2.0.2
 cffi==1.14.2
 click==7.1.2
-cryptography==3.0
+cryptography==3.1
 cycler==0.10.0
 geographiclib==1.50
 geopy==2.0.0
@@ -25,11 +25,12 @@ pathspec==0.8.0
 Pillow==7.2.0
 pluggy==0.13.1
 -e ../PowerSimData
+psycopg2==2.8.5
 py==1.9.0
 pycparser==2.20
 PyNaCl==1.4.0
 pyparsing==2.4.7
-pyproj==1.9.6
+pyproj==2.6.1.post1
 pytest==5.4.3
 python-dateutil==2.8.1
 pytz==2020.1
