--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ bokeh = "==2.0.2"
 matplotlib = "==3.2.1"
 numpy = "==1.18.5"
 pandas = "==1.0.4"
-pyproj = "==1.9.6"
+pyproj = "==2.6.1.post1"
 pytest = "==5.4.3"
 seaborn = "==0.10.1"
 powersimdata = {editable = true, path = "../PowerSimData"}
