--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 bokeh = "==2.0.2"
 matplotlib = "==3.2.1"
 numpy = "==1.18.5"
-pandas = "==1.0.4"
+pandas = "~=1.1.2"
 pyproj = "==2.6.1.post1"
 pytest = "==5.4.3"
 seaborn = "==0.10.1"
