--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bokeh==2.0.2
 black==20.8b1
 matplotlib==3.2.1
 numpy==1.18.5
-pandas==1.0.4
+pandas~=1.1.2
 -e ../PowerSimData
 pyproj==2.6.1.post1
 pytest==5.4.3
