--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,11 @@ passenv =
 deps = 
     pytest: pipenv
     {format,checkformatting}: black
-    ; {format,checkformatting}: isort
+    {format,checkformatting}: isort
 commands =
     pytest: pipenv sync --dev
     pytest: pytest
     format: black .
     format: isort -m 3 --tc .
     checkformatting: black . --check --diff
-    ; checkformatting: isort -m 3 --tc --check --diff .
+    checkformatting: isort -m 3 --tc --check --diff .
