ci: add flake8 tooling and fix or ignore warnings

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pytest, format
+envlist = pytest, format, flake8
 skipsdist = true
 
 [testenv]
@@ -10,6 +10,7 @@ deps =
     pytest: pipenv
     {format,checkformatting}: black
     {format,checkformatting}: isort
+    flake8: flake8
 commands =
     pytest: pipenv sync --dev
     pytest: pytest
@@ -17,3 +18,7 @@ commands =
     format: isort -m 3 --tc .
     checkformatting: black . --check --diff
     checkformatting: isort -m 3 --tc --check --diff .
+    flake8: flake8 postreise/
+
+[flake8]
+ignore = E501,W503,E203,E741
