--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,8 @@ verify_ssl = true
 
 [packages]
 bokeh = "==2.0.2"
-matplotlib = "==3.2.1"
-numpy = "==1.18.5"
+matplotlib = "~=3.3"
+numpy = "~=1.19"
 pandas = "~=1.1.2"
 pyproj = "==2.6.1.post1"
 pytest = "==5.4.3"
