--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bokeh==2.0.2
 black==20.8b1
-matplotlib==3.2.1
-numpy==1.18.5
+matplotlib~=3.3
+numpy~=1.19
 pandas~=1.1.2
 -e ../PowerSimData
 pyproj==2.6.1.post1
