ci: use built in black profile for isort

--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,13 @@ commands =
     pytest: pipenv sync --dev
     pytest: pytest
     format: black .
-    format: isort -m 3 --tc .
+    format: isort .
     checkformatting: black . --check --diff
-    checkformatting: isort -m 3 --tc --check --diff .
+    checkformatting: isort --check --diff .
     flake8: flake8 postreise/
 
 [flake8]
 ignore = E501,W503,E203,E741
+
+[isort]
+profile = black
