--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,11 @@ matplotlib = "~=3.3"
 numpy = "~=1.20"
 pandas = "~=1.2"
 pyproj = "==2.6.1.post1"
-pytest = "==5.4.3"
 seaborn = "==0.10.1"
 powersimdata = {editable = true, path = "../PowerSimData"}
 
 [dev-packages]
 black = "*"
+pytest = "*"
+coverage = "*"
+pytest-cov = "*"
