--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 bokeh==2.0.2
-black==20.8b1
 matplotlib~=3.3
 numpy~=1.19
 pandas~=1.1.2
 -e ../PowerSimData
 pyproj==2.6.1.post1
-pytest==5.4.3
+black
+pytest
+coverage
+pytest-cov
