chore: run flake8 on code snippets

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     checkformatting: black . --check --diff
     checkformatting: isort --check --diff .
     flake8: flake8 postreise/
+    flake8: flake8 --extend-ignore=N816 docs/code
 
 [flake8]
 ignore = E501,W503,E203,E741
