ci: code coverage reporting

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     flake8: pep8-naming
 commands =
     pytest: pipenv sync --dev
-    pytest: pytest
+    pytest: pytest {posargs}
     format: black .
     format: isort .
     checkformatting: black . --check --diff
