--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ numpy = "~=1.20"
 pandas = "~=1.2"
 pyproj = "==2.6.1.post1"
 seaborn = "==0.10.1"
-powersimdata = {editable = true, path = "../PowerSimData"}
+powersimdata = "~=0.4.3"
 
 [dev-packages]
 black = "*"
