--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bokeh==2.0.2
 matplotlib~=3.3
 numpy~=1.19
 pandas~=1.1.2
--e ../PowerSimData
+powersimdata~=0.4.3
 pyproj==2.6.1.post1
 black
 pytest
