--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,16 +11,7 @@ jobs:
 
     name: Generate coverage report
     steps:
-      - name: Checkout PostREISE
-        uses: actions/checkout@v2
-        with:
-          path: PostREISE
-
-      - name: Checkout PowerSimData
-        uses: actions/checkout@v2
-        with:
-          repository: Breakthrough-Energy/PowerSimData
-          path: PowerSimData
+      - uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -28,14 +19,10 @@ jobs:
           python-version: 3.8
 
       - run: python -m pip install --upgrade pip tox
-        working-directory: PostREISE
-
       - run: tox -e pytest -- --cov-report=xml
-        working-directory: PostREISE
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           name: codecov-postreise
           fail_ci_if_error: true
-          directory: PostREISE
