--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = postreise
 version = 0.5.0
-author = Kaspar Mueller
-author_email = kaspar@breakthroughenergy.org
+author = Breakthrough Energy
+author_email = sciences@breakthroughenergy.org
 description = Extract, analyze and plot data from scenario
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -27,4 +27,4 @@ install_requires =
     pyproj
 
 [options.package_data]
-postreise = data/*.csv 
+postreise = data/*.csv
