--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,9 @@ verify_ssl = true
 bokeh = "==2.0.2"
 matplotlib = "~=3.3"
 numpy = "~=1.20"
-pandas = "~=1.2"
-pyproj = "==2.6.1.post1"
-seaborn = "==0.10.1"
-powersimdata = "~=0.4.3"
+pandas = "~=1.4.0"
+powersimdata = "~=0.5.0"
+pyproj = "~=3.0"
 
 [dev-packages]
 black = "*"
