--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 bokeh==2.0.2
 matplotlib~=3.3
 numpy~=1.19
-pandas~=1.1.2
-powersimdata~=0.4.3
-pyproj==2.6.1.post1
+pandas~=1.4.0
+powersimdata~=0.5.0
+pyproj~=3.0
 black
 pytest
 coverage
