--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,11 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+
+      - name: Build and publish docker image
+        uses: Breakthrough-Energy/actions/workflow-trigger@main
+        with:
+          repo: plug
+          workflow_id: 12413223
+          token: ${{ secrets.CI_TOKEN_CLONE_REPO }}
+          inputs: '{"imageTags": "stable"}'
