--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,4 +33,4 @@ jobs:
           repo: plug
           workflow_id: 12413223
           token: ${{ secrets.CI_TOKEN_CLONE_REPO }}
-          inputs: '{"imageTags": "stable"}'
+          inputs: '{"imageTag": "stable"}'
