--- a/web_dashboard/frontend/package.json
+++ b/web_dashboard/frontend/package.json
@@ -7,22 +7,28 @@
     "@loaders.gl/core": "^2.3.13",
     "@loaders.gl/json": "^2.3.13",
     "@loaders.gl/shapefile": "^2.3.13",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
     "@nivo/bar": "^0.68.0",
     "@nivo/core": "^0.68.0",
     "@nivo/line": "^0.68.0",
     "@nivo/pie": "^0.68.0",
     "@reduxjs/toolkit": "^1.5.1",
+    "apache-arrow": "5.0.0",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
+    "arquero": "4.8.4",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "deck.gl": "^8.4.16",
     "graphql": "^15.5.0",
     "hookrouter": "^1.2.5",
+    "moment-timezone": "0.5.33",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-day-picker": "7.4.10",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
