chore: use requirements.txt for tests

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
     flake8: flake8
     flake8: pep8-naming
 commands =
-    pytest: pipenv sync --dev
+    pytest: pip install -r requirements.txt
     pytest: pytest {posargs}
     format: black .
     format: isort .
@@ -21,6 +21,8 @@ commands =
 
 [flake8]
 ignore = E501,W503,E203,E741
+exclude =
+    .ipynb_checkpoints
 
 [isort]
 profile = black
